test: [T_0002] Get New User Transaction History ok
